// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useTableInheritedProps > passes non react-table based props 1`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr>
        <th>
          <div
            class="d-flex flex-row gap-1"
          />
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div
            class="dummy"
          />
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th />
      </tr>
    </tfoot>
  </table>
</DocumentFragment>
`;

exports[`useTableInheritedProps > removes all react-table based props 1`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr>
        <th>
          <div
            class="d-flex flex-row gap-1"
          />
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div />
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th />
      </tr>
    </tfoot>
  </table>
</DocumentFragment>
`;
